--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="signupBox">
+	<div class="push"></div>
+	<a href="#" class="signup_button round">sign up</a>	
+	<div id="joinToday"><p>Join today!</p></div>	
+</div>
+<div id="featuredPicture"></div>
