--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Soccerweb</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+	<header>
+		<title><%= @title %></title>
+		<%= render 'layouts/stylesheets' %>    
+		<%= javascript_include_tag :defaults %>
+    <!--%= javascript_include_tag 'jquery.min.js', 'jquery_ujs' %-->
+		<%= csrf_meta_tags %>
+	</header>
+	<body>
+		<div id="bigWrapper">
+			<%= render 'layouts/header' %>
+			<div id="content">
+				<%= yield %>			
+			</div>
+			<!--div id="footer"></div-->	
+		</div>
+	</body>
 </html>
