on the fly commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<header>
+	<head>
 		<title><%= @title %></title>
 		<%= render 'layouts/stylesheets' %>    
 		<%= javascript_include_tag :defaults %>
     <!--%= javascript_include_tag 'jquery.min.js', 'jquery_ujs' %-->
 		<%= csrf_meta_tags %>
-	</header>
+	</head>
 	<body>
 		<div id="bigWrapper">
 			<%= render 'layouts/header' %>
