--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div id="signupBox">
 	<div class="push"></div>
-	<a href="#" class="signup_button round">sign up</a>	
+	<!--a href="#" class="signup_button round">sign up</a-->
+	<%= link_to "Sign up now", signup_path,:class=> "signup_button round" %>	
 	<div id="joinToday"><p>Join today!</p></div>	
 </div>
 <div id="featuredPicture"></div>
