--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
 			<div id="menuBar">
 				<ul>
 					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "About", about_path %></a></li>						
+					<li><%= link_to "About", about_path %></li>
+					<li><%= link_to "Sign In", signin_path  %></li>						
 				</ul>
 			</div>
 		</div>
