--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
 			<div id="content">
 				<%= yield %>			
 			</div>
-			<!--div id="footer"></div-->	
+			<!--div id="footer"></div-->
+			<%= debug(params) if Rails.env.development? %>
+			
 		</div>
+		
 	</body>
 </html>
