--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,12 @@
 <%= form_for(@user) do |f|%>
-<%= f.label :name %><br/>
-<%= f.text_field :name %><br/>
-<%= f.label :email %><br/>
-<%= f.text_field :email %><br/>
-<%= f.label :password %><br/>
-<%= f.password_field :password %><br/>
-<%= f.label :password_confirmation, "Confirmation"  %><br/>
-<%= f.password_field :password_confirmation %><br/>
+	<%= render 'shared/error_messages' %>
+	<%= f.label :name %><br/>
+	<%= f.text_field :name %><br/>
+	<%= f.label :email %><br/>
+	<%= f.text_field :email %><br/>
+	<%= f.label :password %><br/>
+	<%= f.password_field :password %><br/>
+	<%= f.label :password_confirmation, "Confirmation"  %><br/>
+	<%= f.password_field :password_confirmation %><br/>
+	<%= f.submit "Sign up" %>
 <% end %>
