--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,11 @@
 				<ul>
 					<li><%= link_to "Home", root_path %></li>
 					<li><%= link_to "About", about_path %></li>
-					<li><%= link_to "Sign In", signin_path  %></li>						
+					<% if signed_in? %>
+					<li><%= link_to "Sign out", signout_path, :method => :delete %></li>
+					<% else %>
+					<li><%= link_to "Sign in", signin_path %></li>
+					<% end %>											
 				</ul>
 			</div>
 		</div>
