--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,6 +12,10 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
+  	<%= f.label :birth_date %><br/>
+	<%= f.text_field :birth_date %><br/>
+  </div>
+  <div class="field">
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </div>
