--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
 	<%= f.label :league %><br/>
 	<%= 
 		@leagues = League.find(:all) 
-		collection_select(:league, :league_name, @leagues, :id, :league_name) 
+		collection_select(:user, :league_id, @leagues, :id, :league_name, :include_blank => true) 
 	%></br>
 	<%= f.label :password %><br/>
 	<%= f.password_field :password %><br/>
