--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,15 +16,15 @@
 	<%= 
 		@leagues = League.find(:all) 
 				
-		options = options_from_collection_for_select(@leagues, :id,:league_name, (!@user.team_id.nil?)?Team.find(@user.team_id).league_id : nil)
+		options = options_from_collection_for_select(@leagues, :id,:league_name, (!@user.club_id.nil?)?Club.find(@user.club_id).league_id : nil)
 	
 		select_tag "league_id", options
 	%></br>
   </div>
   <div class="field">
-  	<%= f.label :team %><br/>
+  	<%= f.label :club %><br/>
   	<%= 
-  		collection_select(:user, :team_id, Team.find_all_by_league_id((!@user.team_id.nil?)?Team.find(@user.team_id).league_id : nil), :id, :team_name, options ={:prompt => ""}) 
+  		collection_select(:user, :club_id, Club.find_all_by_league_id((!@user.club_id.nil?)?Club.find(@user.club_id).league_id : nil), :id, :club_name, options ={:prompt => ""}) 
   		
   	%>
   </div>	
@@ -46,33 +46,33 @@
             var id_value_string = $(this).val();
             if (id_value_string == "") { 
                 // if the id is empty remove all the sub_selection options from being selectable and do not do any ajax
-                $("select#user_team_id option").remove();
+                $("select#user_club_id option").remove();
                 var row = "<option value=\"" + "" + "\">" + "" + "</option>";
-                $(row).appendTo("select#user_team_id");
+                $(row).appendTo("select#user_club_id");
             }
             else {
                 // Send the request and update sub category dropdown 
                 $.ajax({
                     dataType: "json",
                     cache: false,
-                    url: '/teams/for_leagueid/' + id_value_string,
+                    url: '/clubs/for_leagueid/' + id_value_string,
                     timeout: 2000,
                     error: function(XMLHttpRequest, errorTextStatus, error){
                         alert("Failed to submit : "+ errorTextStatus+" ;"+error);
                     },
                     success: function(data){                    
                         // Clear all options from sub category select 
-                        $("select#user_team_id option").remove();
+                        $("select#user_club_id option").remove();
                         //put in a empty default line
                         var row = "<option value=\"" + "" + "\">" + "" + "</option>";
-                        $(row).appendTo("select#user_team_id");                        
+                        $(row).appendTo("select#user_club_id");                        
                         // Fill sub category select 
                         
                         //alert (data.length);
                         $.each(data, function(i, j){
                             //alert(j.id);
-                            row = "<option value=\"" + j.id + "\">" + j.team_name + "</option>";   
-                            $(row).appendTo("select#user_team_id");                     
+                            row = "<option value=\"" + j.id + "\">" + j.club_name + "</option>";   
+                            $(row).appendTo("select#user_club_id");                     
                         });             
                      }
                 });
