--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -11,6 +11,14 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :club_name %><br />
+    <%= f.text_field :club_name %>
+  </div>
+  <div class="field">
+    <%= f.label :league_id %><br />
+    <%= f.number_field :league_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
