--- a/public/stylesheets/mockup.css
+++ b/public/stylesheets/mockup.css
@@ -199,3 +199,22 @@ ul a:hover {
   list-style: square;
 }
 
+/*DL, DT, DD TAGS LIST DATA*/
+dl {
+    margin-bottom:50px;
+}
+ 
+dl dt {
+    background:#5f9be3;
+    color:#fff;
+    float:left;
+    font-weight:bold;
+    margin-right:10px;
+    padding:5px;
+    width:100px;
+}
+ 
+dl dd {
+    margin:2px 0;
+    padding:5px 0;
+}
