save stage for json

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,4 +1,10 @@
 Teams
+<% if signed_in? %>
+	<% @user ||= current_user %>
+	<h1><%= @user.name %></h1>
+<% end %>
+
+
   <% for team in @teams %>
    <div  class="teamBox">
 		<div class="newBox">
