--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
 <h1>Pages#about</h1>
 <p>Find me in app/views/pages/about.html.erb</p>
+<%=  link_to "View Image", { :action => "home" }, :popup => ['new_window_name', 'height=300,width=600']  %>
+<br><%= link_to "View Image", "www.google.co.th", :popup => ['dialog name','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=yes'] %>
